# btc-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  changelog.md  container-config.json
coverage/html/html/: index.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/: btc_api_error.rs.html  handlers.rs.html  main.rs.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/blockchains/: btc_api_state.rs.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/blockchains/bitcoin/: mod.rs.html  response_models.rs.html  utils.rs.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/chain/: mod.rs.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/config/: mod.rs.html
coverage/html/html/coverage/Users/avyactjain/code/btc-api/src/models/: mod.rs.html
openapi/: openapi.json  openapi.yaml
postman/: BTC-API.postman_collection.json
src/: btc_api_error.rs  handlers.rs  main.rs
src/blockchains/: blockchain_wrapper.rs  btc_api_state.rs  mod.rs
src/blockchains/bitcoin/: mod.rs  request_models.rs  response_models.rs  utils.rs
src/chain/: mod.rs
src/config/: config.json  mod.rs
src/models/: mod.rs
swagger-ui/: index.html  swagger-ui-bundle.js
