[package]
name = "btc-api"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcoincore-rpc = "0.19.0"
axum = {version= "0.8.1", features = ["macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.25"

