[package]
name = "btc-api"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = {version= "0.8.1", features = ["macros"]}
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4.25"
uuid = { version = "1.7", features = ["v4"] }
futures = "0.3.31"
itertools = "0.14.0"
url = "2.5.4"

bitcoincore-rpc = "0.19.0"
bitcoin = "0.32.5"
hex = "0.4.3"
secp256k1 = { version = "0.27", features = ["bitcoin_hashes", "rand"] }


